--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -2,6 +2,10 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+html {
+  font-size: 10px !important;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
