feat(input-area): add dynamic rows control to input area

--- a/src/assets/effects/scrollbar.scss
+++ b/src/assets/effects/scrollbar.scss
@@ -6,7 +6,8 @@ $scrollbar-color-track: $color-gray-4;
 $scrollbar-color-thumb: $color-gray-3;
 
 @mixin scrollbar {
-  .scrollbar {
+  .scrollbar,
+  .scrollbar :deep(*) {
     &::-webkit-scrollbar {
       border-radius: $scrollbar-radius;
       background-color: $scrollbar-color-track;
