--- a/src/assets/effects/scrollbar.scss
+++ b/src/assets/effects/scrollbar.scss
@@ -1,7 +1,8 @@
+@use 'sass:math';
 @use '@/assets/vars/color.scss' as *;
 
 $scrollbar-width: 0.4rem;
-$scrollbar-radius: $scrollbar-width / 2;
+$scrollbar-radius: math.div($scrollbar-width, 2);
 $scrollbar-color-track: $color-gray-4;
 $scrollbar-color-thumb: $color-gray-3;
 
