--- a/src/views/pageTypewriter/components/Portrait/assets/action-wrapper.scss
+++ b/src/views/pageTypewriter/components/Portrait/assets/action-wrapper.scss
@@ -1,7 +1,9 @@
+$action-wrapper-offset: 0.4rem;
 $action-btn-size: 1.76rem;
 
 @mixin action-wrapper {
   .action-wrapper {
+    padding: $action-wrapper-offset 0;
     width: $action-btn-size;
 
     .action-button {
