--- a/src/views/pageTypewriter/components/Portrait/KeyboardLayout/layout.scss
+++ b/src/views/pageTypewriter/components/Portrait/KeyboardLayout/layout.scss
@@ -36,5 +36,12 @@ $keyboard-key-font-size: 1.6rem;
       font-size: $keyboard-key-font-size;
       font-weight: bold;
     }
+
+    .icon {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 }
