--- a/src/views/pageTypewriter/components/Portrait/KeyboardLayout/keyboard-key.scss
+++ b/src/views/pageTypewriter/components/Portrait/KeyboardLayout/keyboard-key.scss
@@ -1,29 +1,17 @@
-@use '@/assets/vars/color.scss' as *;
+@use '@/assets/effects/theme.scss';
+@use './color.scss' as *;
 
-$keyboard-gap-x: 0.24rem;
-$keyboard-gap-y: 0.4rem;
-$keyboard-max-width: 60rem;
 $keyboard-key-radius: 0.4rem;
 $keyboard-key-height: 3.6rem;
 $keyboard-key-line-height: 1.6rem;
 $keyboard-key-font-size: 1.6rem;
 
-@mixin keyboard-wrapper {
-  .keyboard-wrapper {
-    display: grid;
-    column-gap: $keyboard-gap-x;
-    row-gap: $keyboard-gap-y;
-    max-width: $keyboard-max-width;
-    margin: 0 auto;
-  }
-}
-
-@mixin keyboard-key {
+@include theme.themeify($colors) {
   .keyboard-key {
     position: relative;
-    background-color: $color-white;
-    color: $color-gray-5;
-    border: 0.1rem solid $color-gray-2;
+    background-color: theme.t('keyboard-key-bg-color');
+    color: theme.t('keyboard-key-text-color');
+    border: 0.1rem solid theme.t('keyboard-key-border-color');
     border-radius: $keyboard-key-radius;
     height: $keyboard-key-height;
 
