feat(keyboard-layout): change keyborad layout icon styles to theme friendly

--- a/src/views/pageTypewriter/components/Portrait/KeyboardLayout/color.scss
+++ b/src/views/pageTypewriter/components/Portrait/KeyboardLayout/color.scss
@@ -1,15 +1,17 @@
 @use '@/assets/vars/color.scss' as *;
 
 $colors-light: (
-  keyboard-key-bg-color: $color-white,
-  keyboard-key-text-color: $color-gray-5,
   keyboard-key-border-color: $color-gray-2,
+  keyboard-key-bg-default-color: $color-white,
+  keyboard-key-text-default-color: $color-gray-5,
+  keyboard-key-icon-default-color: $color-gray-5,
 );
 
 $colors-dark: (
-  keyboard-key-bg-color: $color-white,
-  keyboard-key-text-color: $color-gray-5,
   keyboard-key-border-color: $color-gray-2,
+  keyboard-key-bg-default-color: $color-white,
+  keyboard-key-text-default-color: $color-gray-5,
+  keyboard-key-icon-default-color: $color-gray-5,
 );
 
 $colors: (
