--- a/src/views/pageTypewriter/components/Portrait/TransformSwitcher/color.module.scss
+++ b/src/views/pageTypewriter/components/Portrait/TransformSwitcher/color.module.scss
@@ -2,6 +2,8 @@
 @use './color.scss' as *;
 
 :export {
+  light--dropdown-arrow-color: map.get($colors-light, 'dropdown-arrow-color');
+  dark--dropdown-arrow-color: map.get($colors-dark, 'dropdown-arrow-color');
   light--conv-arrow-color: map.get($colors-light, 'conv-arrow-color');
   dark--conv-arrow-color: map.get($colors-dark, 'conv-arrow-color');
 }
