--- a/src/views/pageTypewriter/components/Portrait/TransformSwitcher/color.scss
+++ b/src/views/pageTypewriter/components/Portrait/TransformSwitcher/color.scss
@@ -1,10 +1,12 @@
 @use '@/assets/vars/color.scss' as *;
 
 $colors-light: (
+  dropdown-arrow-color: $color-white,
   conv-arrow-color: $color-gray-1,
 );
 
 $colors-dark: (
+  dropdown-arrow-color: $color-white,
   conv-arrow-color: $color-gray-1,
 );
 
