style: standardized color names in scss

--- a/src/components/ButtonBasic/color.scss
+++ b/src/components/ButtonBasic/color.scss
@@ -1,17 +1,17 @@
 @use '@/assets/vars/color.scss' as *;
 
 $btn-colors-light: (
-  btn-default-fill-color: $color-white,
+  btn-default-fill-color: $color-white-1,
   btn-default-text-color: $color-gray-2,
-  btn-primary-fill-color: $color-primary-1,
-  btn-primary-text-color: $color-white,
+  btn-primary-fill-color: $color-blue-2,
+  btn-primary-text-color: $color-white-1,
 );
 
 $btn-colors-dark: (
-  btn-default-fill-color: $color-white,
+  btn-default-fill-color: $color-white-1,
   btn-default-text-color: $color-gray-2,
-  btn-primary-fill-color: $color-primary-1,
-  btn-primary-text-color: $color-white,
+  btn-primary-fill-color: $color-blue-2,
+  btn-primary-text-color: $color-white-1,
 );
 
 $btn-colors: (
