--- a/src/components/CardBasic/color.scss
+++ b/src/components/CardBasic/color.scss
@@ -1,11 +1,11 @@
 @use '@/assets/vars/color.scss' as *;
 
 $card-colors-light: (
-  card-bg-color: $color-white,
+  card-bg-color: $color-white-1,
 );
 
 $card-colors-dark: (
-  card-bg-color: $color-white,
+  card-bg-color: $color-white-1,
 );
 
 $card-colors: (
