--- a/src/views/pageTypewriter/components/Portrait/InputArea/color.scss
+++ b/src/views/pageTypewriter/components/Portrait/InputArea/color.scss
@@ -2,12 +2,12 @@
 
 $colors-light: (
   clear-btn-color: $color-gray-1,
-  focus-outline-color: $color-primary-2,
+  focus-outline-color: $color-blue-3,
 );
 
 $colors-dark: (
   clear-btn-color: $color-gray-1,
-  focus-outline-color: $color-primary-2,
+  focus-outline-color: $color-blue-3,
 );
 
 $colors: (
