--- a/src/views/pageTypewriter/components/Portrait/KeyboardLayout/color.scss
+++ b/src/views/pageTypewriter/components/Portrait/KeyboardLayout/color.scss
@@ -2,14 +2,14 @@
 
 $colors-light: (
   keyboard-key-border-color: $color-gray-2,
-  keyboard-key-bg-default-color: $color-white,
+  keyboard-key-bg-default-color: $color-white-1,
   keyboard-key-text-default-color: $color-gray-5,
   keyboard-key-icon-default-color: $color-gray-5,
 );
 
 $colors-dark: (
   keyboard-key-border-color: $color-gray-2,
-  keyboard-key-bg-default-color: $color-white,
+  keyboard-key-bg-default-color: $color-white-1,
   keyboard-key-text-default-color: $color-gray-5,
   keyboard-key-icon-default-color: $color-gray-5,
 );
