--- a/src/views/pageTypewriter/components/Portrait/PortraitLayout/color.scss
+++ b/src/views/pageTypewriter/components/Portrait/PortraitLayout/color.scss
@@ -1,11 +1,11 @@
 @use '@/assets/vars/color.scss' as *;
 
 $colors-light: (
-  layout-bg-color: $color-bg,
+  layout-bg-color: $color-blue-1,
 );
 
 $colors-dark: (
-  layout-bg-color: $color-bg,
+  layout-bg-color: $color-blue-1,
 );
 
 $colors: (
