--- a/src/assets/vars/color.scss
+++ b/src/assets/vars/color.scss
@@ -1,7 +1,7 @@
-$color-bg: #e6ecf2;
-$color-white: #fff;
-$color-primary-1: #66b3ff;
-$color-primary-2: #39f;
+$color-white-1: #fff;
+$color-blue-1: #e6ecf2;
+$color-blue-2: #66b3ff;
+$color-blue-3: #39f;
 $color-gray-1: #737980;
 $color-gray-2: #808080;
 $color-gray-3: #b3b3b3;
