--- a/src/components/TextAreaBasic/color.scss
+++ b/src/components/TextAreaBasic/color.scss
@@ -1,13 +1,13 @@
 @use '@/assets/vars/color.scss' as *;
 
 $textarea-colors-light: (
-  textarea-bg-color: $color-white,
+  textarea-bg-color: $color-white-1,
   textarea-text-color: $color-gray-2,
   textarea-placeholder-color: $color-gray-3,
 );
 
 $textarea-colors-dark: (
-  textarea-bg-color: $color-white,
+  textarea-bg-color: $color-white-1,
   textarea-text-color: $color-gray-2,
   textarea-placeholder-color: $color-gray-3,
 );
