--- a/src/views/pageTypewriter/components/Portrait/ActionBar/color.scss
+++ b/src/views/pageTypewriter/components/Portrait/ActionBar/color.scss
@@ -2,16 +2,16 @@
 
 $colors-light: (
   keyboard-default-color: $color-gray-5,
-  keyboard-active-color: $color-primary-1,
+  keyboard-active-color: $color-blue-2,
   arrow-default-color: $color-gray-5,
-  arrow-active-color: $color-primary-1,
+  arrow-active-color: $color-blue-2,
 );
 
 $colors-dark: (
   keyboard-default-color: $color-gray-5,
-  keyboard-active-color: $color-primary-1,
+  keyboard-active-color: $color-blue-2,
   arrow-default-color: $color-gray-5,
-  arrow-active-color: $color-primary-1,
+  arrow-active-color: $color-blue-2,
 );
 
 $colors: (
