--- a/src/views/pageTypewriter/components/Portrait/FontSelector/color.scss
+++ b/src/views/pageTypewriter/components/Portrait/FontSelector/color.scss
@@ -2,20 +2,20 @@
 
 $colors-light: (
   group-icon-default-color: $color-gray-7,
-  group-icon-active-color: $color-primary-1,
+  group-icon-active-color: $color-blue-2,
   group-separator-default-color: $color-gray-7,
-  group-separator-active-color: $color-primary-1,
+  group-separator-active-color: $color-blue-2,
   item-text-default-color: $color-gray-2,
-  item-text-active-color: $color-primary-1,
+  item-text-active-color: $color-blue-2,
 );
 
 $colors-dark: (
   group-icon-default-color: $color-gray-7,
-  group-icon-active-color: $color-primary-1,
+  group-icon-active-color: $color-blue-2,
   group-separator-default-color: $color-gray-7,
-  group-separator-active-color: $color-primary-1,
+  group-separator-active-color: $color-blue-2,
   item-text-default-color: $color-gray-2,
-  item-text-active-color: $color-primary-1,
+  item-text-active-color: $color-blue-2,
 );
 
 $colors: (
