style: reorder theme color in CSS modules

--- a/src/views/pageTypewriter/components/Portrait/FontSelector/color.module.scss
+++ b/src/views/pageTypewriter/components/Portrait/FontSelector/color.module.scss
@@ -2,15 +2,17 @@
 @use './color.scss' as *;
 
 :export {
+  // Theme: Light
   light--group-icon-default-color:
     map.get($colors-light,
-    'group-icon-default-color');
-  dark--group-icon-default-color:
-    map.get($colors-dark,
     'group-icon-default-color');
   light--group-icon-active-color:
     map.get($colors-light,
     'group-icon-active-color');
+  // Theme: Dark
+  dark--group-icon-default-color:
+    map.get($colors-dark,
+    'group-icon-default-color');
   dark--group-icon-active-color:
     map.get($colors-dark,
     'group-icon-active-color');
