--- a/src/views/pageTypewriter/components/Portrait/InputArea/color.module.scss
+++ b/src/views/pageTypewriter/components/Portrait/InputArea/color.module.scss
@@ -2,6 +2,8 @@
 @use './color.scss' as *;
 
 :export {
+  // Theme: Light
   light--clear-btn-color: map.get($colors-light, 'clear-btn-color');
+  // Theme: Dark
   dark--clear-btn-color: map.get($colors-dark, 'clear-btn-color');
 }
