--- a/src/views/pageTypewriter/components/Portrait/TransformSwitcher/color.module.scss
+++ b/src/views/pageTypewriter/components/Portrait/TransformSwitcher/color.module.scss
@@ -2,8 +2,10 @@
 @use './color.scss' as *;
 
 :export {
+  // Theme: Light
   light--dropdown-arrow-color: map.get($colors-light, 'dropdown-arrow-color');
-  dark--dropdown-arrow-color: map.get($colors-dark, 'dropdown-arrow-color');
   light--conv-arrow-color: map.get($colors-light, 'conv-arrow-color');
+  // Theme: Dark
+  dark--dropdown-arrow-color: map.get($colors-dark, 'dropdown-arrow-color');
   dark--conv-arrow-color: map.get($colors-dark, 'conv-arrow-color');
 }
