--- a/src/views/pageTypewriter/components/Portrait/KeyboardLayout/color.module.scss
+++ b/src/views/pageTypewriter/components/Portrait/KeyboardLayout/color.module.scss
@@ -6,8 +6,20 @@
   light--keyboard-key-icon-default-color:
     map.get($colors-light,
     'keyboard-key-icon-default-color');
+  light--keyboard-key-icon-active-color:
+    map.get($colors-light,
+    'keyboard-key-icon-active-color');
+  light--keyboard-key-icon-hold-color:
+    map.get($colors-light,
+    'keyboard-key-icon-hold-color');
   // Theme: Dark
   dark--keyboard-key-icon-default-color:
     map.get($colors-dark,
     'keyboard-key-icon-default-color');
+  dark--keyboard-key-icon-active-color:
+    map.get($colors-dark,
+    'keyboard-key-icon-active-color');
+  dark--keyboard-key-icon-hold-color:
+    map.get($colors-dark,
+    'keyboard-key-icon-hold-color');
 }
