style: update lint & style format

--- a/src/views/pageTypewriter/components/Portrait/FontSelector/color.scss
+++ b/src/views/pageTypewriter/components/Portrait/FontSelector/color.scss
@@ -1,4 +1,4 @@
-@use '@/assets/vars/color.scss' as *;
+@use "@/assets/vars/color.scss" as *;
 
 $colors-light: (
   group-icon-default-color: $color-gray-7,
@@ -8,7 +8,6 @@ $colors-light: (
   item-text-default-color: $color-gray-2,
   item-text-active-color: $color-blue-2,
 );
-
 $colors-dark: (
   group-icon-default-color: $color-gray-7,
   group-icon-active-color: $color-blue-2,
@@ -17,7 +16,6 @@ $colors-dark: (
   item-text-default-color: $color-gray-2,
   item-text-active-color: $color-blue-2,
 );
-
 $colors: (
   light: $colors-light,
   dark: $colors-dark,
