--- a/src/views/pageTypewriter/components/Portrait/KeyboardLayout/keyboard-key.scss
+++ b/src/views/pageTypewriter/components/Portrait/KeyboardLayout/keyboard-key.scss
@@ -1,5 +1,5 @@
-@use '@/assets/effects/theme.scss';
-@use './color.scss' as *;
+@use "@/assets/effects/theme.scss";
+@use "./color.scss" as *;
 
 $keyboard-key-radius: 0.4rem;
 $keyboard-key-height: 3.6rem;
@@ -9,8 +9,8 @@ $keyboard-key-font-size: 1.6rem;
 @include theme.themeify($colors) {
   .keyboard-key {
     position: relative;
-    background-color: theme.t('keyboard-key-bg-default-color');
-    border: 0.1rem solid theme.t('keyboard-key-border-default-color');
+    background-color: theme.t("keyboard-key-bg-default-color");
+    border: 0.1rem solid theme.t("keyboard-key-border-default-color");
     border-radius: $keyboard-key-radius;
     height: $keyboard-key-height;
 
@@ -19,7 +19,7 @@ $keyboard-key-font-size: 1.6rem;
       left: 50%;
       top: 50%;
       transform: translate(-50%, -50%);
-      color: theme.t('keyboard-key-text-default-color');
+      color: theme.t("keyboard-key-text-default-color");
       line-height: $keyboard-key-line-height;
       font-size: $keyboard-key-font-size;
       font-weight: bold;
@@ -33,20 +33,20 @@ $keyboard-key-font-size: 1.6rem;
     }
 
     &.active {
-      background-color: theme.t('keyboard-key-bg-active-color');
-      border-color: theme.t('keyboard-key-border-active-color');
+      background-color: theme.t("keyboard-key-bg-active-color");
+      border-color: theme.t("keyboard-key-border-active-color");
 
       .text {
-        color: theme.t('keyboard-key-text-active-color');
+        color: theme.t("keyboard-key-text-active-color");
       }
     }
 
     &.hold {
-      background-color: theme.t('keyboard-key-bg-hold-color');
-      border-color: theme.t('keyboard-key-border-hold-color');
+      background-color: theme.t("keyboard-key-bg-hold-color");
+      border-color: theme.t("keyboard-key-border-hold-color");
 
       .text {
-        color: theme.t('keyboard-key-text-hold-color');
+        color: theme.t("keyboard-key-text-hold-color");
       }
     }
   }
