--- a/src/assets/effects/scrollbar.scss
+++ b/src/assets/effects/scrollbar.scss
@@ -1,20 +1,17 @@
-@use 'sass:math';
-@use '@/assets/vars/color.scss' as *;
-@use './theme.scss';
+@use "sass:math";
+@use "@/assets/vars/color.scss" as *;
+@use "./theme.scss";
 
 $scrollbar-width: 0.4rem;
 $scrollbar-radius: math.div($scrollbar-width, 2);
-
 $scrollbar-colors-light: (
-  'scrollbar-track-color': $color-gray-4,
-  'scrollbar-thumb-color': $color-gray-3,
+  "scrollbar-track-color": $color-gray-4,
+  "scrollbar-thumb-color": $color-gray-3,
 );
-
 $scrollbar-colors-dark: (
-  'scrollbar-track-color': $color-gray-4,
-  'scrollbar-thumb-color': $color-gray-3,
+  "scrollbar-track-color": $color-gray-4,
+  "scrollbar-thumb-color": $color-gray-3,
 );
-
 $scrollbar-colors: (
   light: $scrollbar-colors-light,
   dark: $scrollbar-colors-dark,
@@ -26,7 +23,7 @@ $scrollbar-colors: (
     .scrollbar :deep(*) {
       &::-webkit-scrollbar {
         border-radius: $scrollbar-radius;
-        background-color: theme.t('scrollbar-track-color');
+        background-color: theme.t("scrollbar-track-color");
       }
 
       &::-webkit-scrollbar:horizontal {
@@ -43,7 +40,7 @@ $scrollbar-colors: (
 
       &::-webkit-scrollbar-thumb {
         border-radius: $scrollbar-radius;
-        background-color: theme.t('scrollbar-thumb-color');
+        background-color: theme.t("scrollbar-thumb-color");
       }
     }
   }
