--- a/src/components/ButtonBasic/color.scss
+++ b/src/components/ButtonBasic/color.scss
@@ -1,4 +1,4 @@
-@use '@/assets/vars/color.scss' as *;
+@use "@/assets/vars/color.scss" as *;
 
 $btn-colors-light: (
   btn-default-fill-color: $color-white-1,
@@ -6,14 +6,12 @@ $btn-colors-light: (
   btn-primary-fill-color: $color-blue-2,
   btn-primary-text-color: $color-white-1,
 );
-
 $btn-colors-dark: (
   btn-default-fill-color: $color-white-1,
   btn-default-text-color: $color-gray-2,
   btn-primary-fill-color: $color-blue-2,
   btn-primary-text-color: $color-white-1,
 );
-
 $btn-colors: (
   light: $btn-colors-light,
   dark: $btn-colors-dark,
