--- a/src/views/pageTypewriter/components/Portrait/ActionBar/color.scss
+++ b/src/views/pageTypewriter/components/Portrait/ActionBar/color.scss
@@ -1,4 +1,4 @@
-@use '@/assets/vars/color.scss' as *;
+@use "@/assets/vars/color.scss" as *;
 
 $colors-light: (
   keyboard-default-color: $color-gray-5,
@@ -6,14 +6,12 @@ $colors-light: (
   arrow-default-color: $color-gray-5,
   arrow-active-color: $color-blue-2,
 );
-
 $colors-dark: (
   keyboard-default-color: $color-gray-5,
   keyboard-active-color: $color-blue-2,
   arrow-default-color: $color-gray-5,
   arrow-active-color: $color-blue-2,
 );
-
 $colors: (
   light: $colors-light,
   dark: $colors-dark,
