--- a/src/views/pageTypewriter/components/Portrait/InputArea/color.scss
+++ b/src/views/pageTypewriter/components/Portrait/InputArea/color.scss
@@ -1,15 +1,13 @@
-@use '@/assets/vars/color.scss' as *;
+@use "@/assets/vars/color.scss" as *;
 
 $colors-light: (
   clear-btn-color: $color-gray-1,
   focus-outline-color: $color-blue-3,
 );
-
 $colors-dark: (
   clear-btn-color: $color-gray-1,
   focus-outline-color: $color-blue-3,
 );
-
 $colors: (
   light: $colors-light,
   dark: $colors-dark,
