--- a/src/views/pageTypewriter/components/Portrait/KeyboardLayout/color.scss
+++ b/src/views/pageTypewriter/components/Portrait/KeyboardLayout/color.scss
@@ -1,4 +1,4 @@
-@use '@/assets/vars/color.scss' as *;
+@use "@/assets/vars/color.scss" as *;
 
 $colors-light: (
   keyboard-key-bg-default-color: $color-white-1,
@@ -18,7 +18,6 @@ $colors-light: (
   keyboard-key-text-hold-color: $color-blue-2,
   keyboard-key-icon-hold-color: $color-blue-2,
 );
-
 $colors-dark: (
   keyboard-key-bg-default-color: $color-white-1,
   keyboard-key-border-default-color: $color-gray-2,
@@ -37,7 +36,6 @@ $colors-dark: (
   keyboard-key-text-hold-color: $color-blue-2,
   keyboard-key-icon-hold-color: $color-blue-2,
 );
-
 $colors: (
   light: $colors-light,
   dark: $colors-dark,
