--- a/src/views/pageTypewriter/components/Portrait/TransformSwitcher/color.scss
+++ b/src/views/pageTypewriter/components/Portrait/TransformSwitcher/color.scss
@@ -1,15 +1,13 @@
-@use '@/assets/vars/color.scss' as *;
+@use "@/assets/vars/color.scss" as *;
 
 $colors-light: (
   dropdown-arrow-color: $color-white-1,
   conv-arrow-color: $color-gray-1,
 );
-
 $colors-dark: (
   dropdown-arrow-color: $color-white-1,
   conv-arrow-color: $color-gray-1,
 );
-
 $colors: (
   light: $colors-light,
   dark: $colors-dark,
