--- a/src/views/pageTypewriter/components/Portrait/TransformSwitcher/color.scss
+++ b/src/views/pageTypewriter/components/Portrait/TransformSwitcher/color.scss
@@ -6,7 +6,7 @@ $colors-light: (
 );
 $colors-dark: (
   dropdown-arrow-color: $color-white-1,
-  conv-arrow-color: $color-gray-1,
+  conv-arrow-color: $color-white-1,
 );
 $colors: (
   light: $colors-light,
