--- a/src/assets/vars/color.scss
+++ b/src/assets/vars/color.scss
@@ -1,7 +1,13 @@
+// Color: White Base
 $color-white-1: #fff;
+
+// Color: Blue Base
 $color-blue-1: #e6ecf2;
 $color-blue-2: #66b3ff;
 $color-blue-3: #39f;
+$color-blue-4: #177ee6;
+
+// Color: Gray Base
 $color-gray-1: #737980;
 $color-gray-2: #808080;
 $color-gray-3: #b3b3b3;
@@ -9,3 +15,9 @@ $color-gray-4: #f2f2f2;
 $color-gray-5: #666;
 $color-gray-6: #ccc;
 $color-gray-7: #999;
+
+// Color: Black Base
+$color-black-1: #000;
+$color-black-2: #333;
+$color-black-3: #1a1a1a;
+$color-black-4: #262626;
