--- a/src/components/ButtonBasic/color.scss
+++ b/src/components/ButtonBasic/color.scss
@@ -7,9 +7,9 @@ $btn-colors-light: (
   btn-primary-text-color: $color-white-1,
 );
 $btn-colors-dark: (
-  btn-default-fill-color: $color-white-1,
-  btn-default-text-color: $color-gray-2,
-  btn-primary-fill-color: $color-blue-2,
+  btn-default-fill-color: $color-black-4,
+  btn-default-text-color: $color-white-1,
+  btn-primary-fill-color: $color-blue-4,
   btn-primary-text-color: $color-white-1,
 );
 $btn-colors: (
