--- a/src/components/CardBasic/color.scss
+++ b/src/components/CardBasic/color.scss
@@ -4,7 +4,7 @@ $card-colors-light: (
   card-bg-color: $color-white-1,
 );
 $card-colors-dark: (
-  card-bg-color: $color-white-1,
+  card-bg-color: $color-black-4,
 );
 $card-colors: (
   light: $card-colors-light,
