--- a/src/components/TextAreaBasic/color.scss
+++ b/src/components/TextAreaBasic/color.scss
@@ -6,9 +6,9 @@ $textarea-colors-light: (
   textarea-placeholder-color: $color-gray-3,
 );
 $textarea-colors-dark: (
-  textarea-bg-color: $color-white-1,
-  textarea-text-color: $color-gray-2,
-  textarea-placeholder-color: $color-gray-3,
+  textarea-bg-color: $color-black-4,
+  textarea-text-color: $color-white-1,
+  textarea-placeholder-color: $color-gray-2,
 );
 $textarea-colors: (
   light: $textarea-colors-light,
