fix: simplify color spec for light mode

--- a/src/assets/vars/color.scss
+++ b/src/assets/vars/color.scss
@@ -6,6 +6,7 @@ $color-blue-1: #e6ecf2;
 $color-blue-2: #66b3ff;
 $color-blue-3: #39f;
 $color-blue-4: #177ee6;
+$color-blue-5: #66b3ff;
 
 // Color: Gray Base
 $color-gray-1: #737980;
